--- a/wp-content/themes/FoundationPress/assets/stylesheets/foundation.css
+++ b/wp-content/themes/FoundationPress/assets/stylesheets/foundation.css
@@ -8672,6 +8672,16 @@ pre {
       #singleTeam .parallax-bg {
         display: block; } }
 
+#archiveTeam .main-cards {
+  margin-top: 0rem !important;
+  margin-bottom: 40px; }
+  @media screen and (min-width: 40em) {
+    #archiveTeam .main-cards {
+      margin-top: 4rem !important; } }
+  @media screen and (min-width: 64em) {
+    #archiveTeam .main-cards {
+      margin-top: 2.5rem !important; } }
+
 #archiveTeam .team-grid {
   min-height: 400px;
   width: calc(100% - 40px);
@@ -8679,16 +8689,6 @@ pre {
   margin: auto; }
   #archiveTeam .team-grid img {
     width: 100%; }
-  #archiveTeam .team-grid .grid-sizer,
-  #archiveTeam .team-grid .grid-item {
-    width: 50%;
-    float: left;
-    padding: 0 1.5%;
-    margin-bottom: 36px; }
-    @media screen and (min-width: 40em) {
-      #archiveTeam .team-grid .grid-sizer,
-      #archiveTeam .team-grid .grid-item {
-        width: 25%; } }
   #archiveTeam .team-grid .team-block {
     position: relative; }
     #archiveTeam .team-grid .team-block a {
@@ -8715,7 +8715,6 @@ pre {
       opacity: 0; }
     #archiveTeam .team-grid .team-block .team-meta {
       width: 100%;
-      height: 34px;
       margin: 12px auto;
       text-align: center; }
       #archiveTeam .team-grid .team-block .team-meta h4 {
